demopaymentsapp/destination-rules/config-service-dr.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: config-service
spec:
  host: config-service
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
---
