demopaymentsapp/destination-rules/market-data-dr.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: market-data
spec:
  host: market-data
  trafficPolicy:
    tls:
      mode: DISABLE
---
