demopaymentsapp/destination-rules/user-profile-dr.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-profile
spec:
  host: user-profile
  trafficPolicy:
    tls:
      mode: DISABLE
---
